--- a/steellady/index.html
+++ b/steellady/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="msapplication-TileColor" content="#161D27">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="jurist-stalnaya.ru">
+    <meta property="og:title"
+          content="Стальная и партнеры">
+    <meta property="og:description"
+          content=" Стальная и партнеры">
+    <meta property="og:url" content="https://jurist-stalnaya.ru">
+    <meta property="og:image" content="https://jurist-stalnaya.ru">
+    <meta property="og:image:width" content="968">
+    <meta property="og:image:height" content="504">
 
   </head>
   <body>
