--- a/steellady/index.html
+++ b/steellady/index.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="msapplication-TileColor" content="#161D27">
-    <meta name="theme-color" content="#161D27">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="msapplication-TileColor" content="#161D27">
+  <meta name="theme-color" content="#161D27">
 
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:site_name" content="jurist-stalnaya.ru">
-    <meta property="og:title"
-          content="Стальная и партнеры">
-    <meta property="og:description"
-          content=" Стальная и партнеры">
-    <meta property="og:url" content="https://jurist-stalnaya.ru">
-    <meta property="og:image" content="https://jurist-stalnaya.ru">
-    <meta property="og:image:width" content="968">
-    <meta property="og:image:height" content="504">
+  <meta property="og:type" content="website"/>
+  <meta property="og:site_name" content="jurist-stalnaya.ru">
+  <meta property="og:title"
+        content="Стальная и партнеры">
+  <meta property="og:description"
+        content=" Стальная и партнеры">
+  <meta property="og:url" content="https://jurist-stalnaya.ru">
+  <meta property="og:image" content="https://jurist-stalnaya.ru">
+  <meta property="og:image:width" content="968">
+  <meta property="og:image:height" content="504">
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
